--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl">
         FE Workforce prototype
-        <span class="govuk-caption-xl">{{releaseVersion}}</span>
+        <span class="govuk-caption-xl">Prototype kit {{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
       
       <table class="govuk-table">
