--- a/app/views/1-0-0/gov-11.html
+++ b/app/views/1-0-0/gov-11.html
@@ -16,33 +16,45 @@
       
       
       <h1 class="govuk-heading-l">
-        Disability data
+        Board member vacancies
       </h1>
       
-      <p class="govuk-body">Enter figures for governors in applicable age ranges. You can use 0 or leave blank for age ranges that are not relevant</p>
+      <p class="govuk-body">Record governor vacancies for academic year 2020 to 2021</p>
      
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
-          How many board members consider themselves to have a disability?
+          How many vacancies were there during the academic year?
+        </label>
+        <div id="event-name-hint" class="govuk-hint">
+          Include any governor vacancies that were open at the beginning of, or occurred during, the academic year
+        </div>
+        <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+      </div>
+      
+      <div class="govuk-form-group">
+        <label class="govuk-label govuk-label--m" for="width-5">
+          How many were filled?
         </label>
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
-          How many board members do not identify themselves as having a disability?
+          How many of the vacancies took 6 months or longer to fill?
         </label>
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
-          How many prefer not to say?
+          How many vacancies have been open for 6 months or longer and are still unfilled?
         </label>
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
-      <a href="gov-08.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+     
+      
+      <a href="#" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
         Save and continue
       </a>
 
