--- a/app/views/1-0-0/gov-04.html
+++ b/app/views/1-0-0/gov-04.html
@@ -9,7 +9,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         A total of 12 board members are recorded
       </h1>
       
@@ -23,7 +23,7 @@
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               Is this the correct number of board members?
             </h1>
