--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -15,13 +15,13 @@
 
       
       
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Which ethnic groups represent the board?
       </h1>
       
       <p class="govuk-body">Enter figures for ethnic groups that make up the board</p>
      
-      <h2 class="govuk-heading-l">White</h2>
+      <h2 class="govuk-heading-m">White</h2>
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-5">
           English / Welsh / Scottish / Northern Irish / British
@@ -57,7 +57,7 @@
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
-      <h2 class="govuk-heading-l">Mixed / Multiple ethnic groups</h2>
+      <h2 class="govuk-heading-m">Mixed / Multiple ethnic groups</h2>
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-5">
@@ -87,7 +87,7 @@
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
-      <h2 class="govuk-heading-l">Asian / Asian British</h2>      
+      <h2 class="govuk-heading-m">Asian / Asian British</h2>      
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-5">
@@ -125,7 +125,7 @@
       </div>
 
 
-      <h2 class="govuk-heading-l">Black / African / Caribbean / Black British</h2>      
+      <h2 class="govuk-heading-m">Black / African / Caribbean / Black British</h2>      
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-5">
@@ -148,7 +148,7 @@
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
-      <h2 class="govuk-heading-l">Other</h2>      
+      <h2 class="govuk-heading-m">Other</h2>      
       
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-5">
