--- a/app/views/1-0-0/includes/sidebar_related.html
+++ b/app/views/1-0-0/includes/sidebar_related.html
@@ -66,6 +66,11 @@
           ILR FileMerge
         </a>
       </li>
+      <li>
+        <a href="#">
+          Governor data specification
+        </a>
+      </li>
     </ul>
   </nav>
 </aside>
