--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -9,7 +9,9 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">
+              {% include "./includes/gov_data_tag.html" %}  
+
+        <h1 class="govuk-heading-l">
         How is the board represented?
       </h1>
       
