--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -14,7 +14,8 @@
     <div class="govuk-grid-column-two-thirds">
 
       
-      
+            {% include "./includes/gov_data_tag.html" %}  
+
       <h1 class="govuk-heading-l">
         Which ethnic groups represent the board?
       </h1>
