--- a/app/views/1-0-0/includes/gov_data_tag.html
+++ b/app/views/1-0-0/includes/gov_data_tag.html
@@ -1,2 +1,2 @@
-<span class="govuk-caption-l">Governor data as at July 31 2021</span>
+<span class="govuk-caption-l">Governor data as at 31 July 2021</span>
 
