--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -17,6 +17,8 @@
       
         <p>Do not include co-opted governors.</p>
 
+      <form action="gov-04" method="post" class="form">
+
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="width-5">
             Staff governors
@@ -24,7 +26,7 @@
           <div id="account-number-hint" class="govuk-hint">
             Include executive (ex-officio), principal or chief executive and other staff members who are governors
           </div>
-          <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+          <input class="govuk-input govuk-input--width-5" id="width-5" name="staff-governors" type="text">
         </div>
         
         <div class="govuk-form-group">
@@ -34,7 +36,7 @@
           <div id="account-number-hint" class="govuk-hint">
             Include part-time students if applicable
           </div>
-          <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+          <input class="govuk-input govuk-input--width-5" id="width-5" name="student-governors" type="text">
         </div>
         
         <div class="govuk-form-group">
@@ -42,9 +44,9 @@
             Independent governors
           </label>
           <div id="account-number-hint" class="govuk-hint">
-            Not a member of staff at the organisation or in a representative position such as staff, student or parent
+            Not a member of staff, student or parent at the organisation
           </div>
-          <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+          <input class="govuk-input govuk-input--width-5" id="width-5" name="independent-governors" type="text">
         </div>
 
         <div class="govuk-form-group">
@@ -52,17 +54,14 @@
             Parent governors
           </label>
           <div id="account-number-hint" class="govuk-hint">
-            Parent of a learner at the organisation. Not a member of staff at the organisation or in a representative position such as staff member or student
+            Parent of a learner at the organisation. Not a member of staff or a student at the organisation
           </div>
-          <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
+          <input class="govuk-input govuk-input--width-5" id="width-5" name="parent-governors" type="text">
         </div>
 
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
-
-          <a href="gov-04.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </a>
-
+        </form>
     </div>
 
    
