--- a/app/views/1-0-0/gov-06.html
+++ b/app/views/1-0-0/gov-06.html
@@ -15,7 +15,7 @@
         What are the age ranges of the board members?
       </h1>
       
-      <p class="govuk-body">Enter figures for governors in applicable age ranges. You can use 0 or leave blank for age ranges that are not relevant</p>
+      <p class="govuk-body">Enter figures for governors into applicable age ranges.</p>
      
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
