--- a/app/views/1-0-0/gov-09.html
+++ b/app/views/1-0-0/gov-09.html
@@ -20,7 +20,7 @@
         How long have board members served since they were appointed?
       </h1>
       
-      <p class="govuk-body">Enter figures across applicable age ranges up to 31 July 2021 for all governors</p>
+      <p class="govuk-body">Enter figures accounting for all board members.</p>
      
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
