--- a/app/views/1-0-0/gov-11.html
+++ b/app/views/1-0-0/gov-11.html
@@ -14,21 +14,19 @@
     <div class="govuk-grid-column-two-thirds">
 
       
-              {% include "./includes/gov_data_tag.html" %}  
-
+         
       <h1 class="govuk-heading-l">
         Board member vacancies
       </h1>
       
-      <p class="govuk-body">Record governor vacancies for academic year 2020 to 2021</p>
+      <p class="govuk-body">Record governor vacancies for academic year 2020 to 2021. </p>
+       <p> Include all governor vacancies that were open at the beginning of, or occurred during the academic year.</p>
      
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
           How many vacancies were there during the academic year?
         </label>
-        <div id="event-name-hint" class="govuk-hint">
-          Include any governor vacancies that were open at the beginning of, or occurred during, the academic year
-        </div>
+        
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
       
