--- a/app/views/1-0-0/start.html
+++ b/app/views/1-0-0/start.html
@@ -28,7 +28,7 @@
 
           <h2 class="govuk-heading-m">Before you start</h2>
 
-        <p class="govuk-body">This collection uses an online form. You can save progress and return to complete the collection..</p>
+        <p class="govuk-body">This collection uses an online form. You can save progress and return to complete the collection or edit your data collection within the reporting period.</p>
 
         <p class="govuk-body">You will need:</p>
 <ul class="govuk-list govuk-list--bullet">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="govuk-grid-column-one-third">
-      {% include "./includes/sidebar_related.html" %}
+      
     </div>
   </div>
 
