--- a/app/views/1-0-0/gov-03b.html
+++ b/app/views/1-0-0/gov-03b.html
@@ -7,47 +7,49 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-           
-           
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <form method="get" class="form">
+    
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              {% include "./includes/gov_data_tag.html" %}  
             <h1 class="govuk-fieldset__heading">
-              Were there any board member vacancies during academic year ?
+              Based on the new figures added, all your data will need to be re-entered
             </h1>
           </legend>
-          <div id="changed-name-hint" class="govuk-hint">
-            Include any governor vacancies that were open at the beginning of, or occurred during, the academic year
-          </div>
+          <!-- <div id="changed-name-hint" class="govuk-hint">
+            This includes changing your last name or spelling your name differently.
+          </div> -->
           <div class="govuk-radios govuk-radios--inline">
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
               <label class="govuk-label govuk-radios__label" for="changed-name">
-                Yes
+                Yes, continue and re-enter new data
               </label>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
               <label class="govuk-label govuk-radios__label" for="changed-name-2">
-                No
+                No, keep my current figures
               </label>
+              <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                  New figures will not be used
+                </div>
             </div>
           </div>
       
         </fieldset>
       </div>
 
+    <button class="govuk-button" data-module="govuk-button">
+      Save and continue
+    </button>
 
+  </form>
 
-          <a href="gov-11.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </a>
-
-    </div>
-
-   
-  </div>
+  </div> 
+</div>
 
 {% endblock %}
