--- a/app/views/1-0-0/gov-04.html
+++ b/app/views/1-0-0/gov-04.html
@@ -12,50 +12,56 @@
               {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
-        A total of 12 board members are recorded
+        A total of <span id="totalGovernors">12</span> board members are recorded
       </h1>
       
       <p class="govuk-body">Board representation:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>4 Staff governors</li>
-        <li>3 Student governors</li>
-        <li>4 Independent governors</li>
-        <li>1 Parent governor</li>      
+          <li>
+              <span id="staffGovernors">{{ data['staff-governors'] }}</span> Staff governors
+          </li>
+          <li>
+              <span id="studentGovernors">{{ data['student-governors'] }}</span> Student governors
+          </li>
+          <li>
+              <span id="independantGovernors">{{ data['independent-governors'] }}</span> Independent governors
+          </li>
+          <li>
+              <span id="parentGovernors">{{ data['parent-governors'] }}</span> Parent governors
+          </li>     
       </ul>
+      <form method="get" class="form">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <h2 class="govuk-fieldset__heading">
+                Is this the correct number of board members?
+              </h2>
+            </legend>
+            <div class="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="test" name="test" type="radio" value="yes~/1-0-0/gov-05">
+                <label class="govuk-label govuk-radios__label" for="test">
+                  Yes, it's the correct number
+                </label>
+              </div>
 
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h1 class="govuk-fieldset__heading">
-              Is this the correct number of board members?
-            </h1>
-          </legend>
-          <div class="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                Yes, it's the correct number
-              </label>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="test-2" name="test" type="radio" value="no~/1-0-0/gov-03">
+                <label class="govuk-label govuk-radios__label" for="test-2">
+                  No, I want to make changes
+                </label>
+              </div>
+              
             </div>
+        
+          </fieldset>
+        </div>
 
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                No, I want to make changes
-              </label>
-            </div>
-            
-          </div>
-      
-        </fieldset>
-      </div>
-
-
-
-          <a href="gov-05.html" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-            Save and continue
-          </a>
-
+        <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+          Save and continue
+        </button>
+      </form>
     </div>
 
    
