--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -20,7 +20,7 @@
         Which ethnic groups represent the board?
       </h1>
       
-      <p class="govuk-body">Enter figures for ethnic groups that make up the board</p>
+      <p class="govuk-body">Enter figures for ethnic groups that represent the board.</p>
      
       <h2 class="govuk-heading-m">White</h2>
       <div class="govuk-form-group">
