iterations on check our answers

--- a/app/views/1-0-0/gov-03.html
+++ b/app/views/1-0-0/gov-03.html
@@ -15,7 +15,7 @@
         How is the board represented?
       </h1>
       
-        <p>Do not include co-opted governors.</p>
+        <p>Enter figures, do not include co-opted governors.</p>
 
       <form action="gov-04" method="post" class="form">
 
@@ -59,7 +59,7 @@
           <input class="govuk-input govuk-input--width-5" id="width-5" name="parent-governors" type="text">
         </div>
 
-          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <button class="govuk-button" data-module="govuk-button">Continue</button>
 
         </form>
     </div>
