--- a/app/views/1-0-0/gov-08.html
+++ b/app/views/1-0-0/gov-08.html
@@ -17,10 +17,10 @@
             {% include "./includes/gov_data_tag.html" %}  
 
       <h1 class="govuk-heading-l">
-        Which ethnic groups represent the board?
+          Which ethnic groups are represented on the board?
       </h1>
       
-      <p class="govuk-body">Enter figures for ethnic groups that represent the board.</p>
+      <p class="govuk-body">Enter figures for groups that apply.</p>
      
       <h2 class="govuk-heading-m">White</h2>
       <div class="govuk-form-group">
