--- a/app/views/1-0-0/gov-11.html
+++ b/app/views/1-0-0/gov-11.html
@@ -39,7 +39,7 @@
       
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="width-5">
-          How many of the vacancies took 6 months or longer to fill?
+          How many took 6 months or longer to fill?
         </label>
         <input class="govuk-input govuk-input--width-5" id="width-5" name="width-5" type="text">
       </div>
