--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -16,3 +16,11 @@ $govuk-assets-path: '/govuk/assets/';
 @import "patterns/related-items";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+.no-border-bottom {
+    border-bottom: 0;
+}
+
+.float-right {
+    float: right;
+}
