--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,7 @@
                 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>Working on a new version of <a href="1-0-0/start.html">Homepage</a></li>
-                    <li>Added a new warning page <a href="1-0-0/gov-03b.html">gov-03b</a></li>
+                    <li>Added a new on page <a href="1-0-0/gov-04b.html">gov-04b</a></li>
 
                   
                 </ul>
