new pages added

--- a/app/views/1-0-0/gov-12.html
+++ b/app/views/1-0-0/gov-12.html
@@ -37,7 +37,7 @@
               Edit total board members
             </dt>
             <dd class="govuk-summary-list__actions no-border-bottom">
-              <a class="govuk-link" href="gov-05.html">
+              <a class="govuk-link" href="gov-02.html">
                 Change<span class="govuk-visually-hidden"> Total board members</span>
               </a>
             </dd>
@@ -125,7 +125,7 @@
           Male
         </dt>
         <dd class="govuk-summary-list__value govuk-table__header--numeric">
-          3
+            {{ data['male'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -133,7 +133,7 @@
           Female
         </dt>
         <dd class="govuk-summary-list__value govuk-table__header--numeric">
-          3
+            {{ data['female'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -141,7 +141,7 @@
           How many identify in another way?
         </dt>
         <dd class="govuk-summary-list__value govuk-table__header--numeric">
-          3
+            {{ data['another'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -149,7 +149,7 @@
           How many prefer not to say?
         </dt>
         <dd class="govuk-summary-list__value govuk-table__header--numeric">
-          3
+            {{ data['pnts'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -536,7 +536,7 @@
             Over 12 years served
         </dt>
         <dd class="govuk-summary-list__value  govuk-table__header--numeric">
-          0
+          0 
         </dd>
       </div>
       <div class="govuk-summary-list__row">
