--- a/app/views/1-0-0/gov-04c.html
+++ b/app/views/1-0-0/gov-04c.html
@@ -12,7 +12,7 @@
               {% include "./includes/gov_data_tag.html" %}  
 
         <h1 class="govuk-heading-l">
-        A new total of <span id="totalGovernors">12</span> board members are recorded
+        A new total of <span id="totalGovernors">12</span> board members are recorded 
       </h1>
       
       <div class="govuk-warning-text">
@@ -65,7 +65,7 @@
         
           </fieldset>
         </div>
-
+<span class="govuk-visually-hidden">hello</span>
         <button role="button" draggable="false" class="govuk-button" data-module="govuk-button">
           Save and continue
         </button>
